--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,15 +6,24 @@
     <title>Búsqueda de Empresas</title>
     <link rel="stylesheet" href="/static/css/estilos.css">
     <script defer src="/static/js/script.js"></script>
-
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Búsqueda de Empresas</h1>
-    <form id="searchForm">
-        <label for="razon_social">Ingrese la Razón Social de la empresa:</label>
-        <input type="text" id="razon_social" name="razon_social" required>
-        <button type="submit">Buscar</button>
-    </form>
-    <div id="results"></div>
+    <header>
+        <h1 id="titulo" style="text-align: center;" class="text-primary">Búsqueda de Empresas</h1>
+    </header>
+    <main class="container mt-4">
+        <form id="searchForm" class="p-4 border rounded shadow-sm bg-light">
+            <div class="mb-3">
+                <label for="razon_social" class="form-label fw-bold">Ingrese la Razón Social de la empresa:</label>
+                <input type="text" id="razon_social" name="razon_social" class="form-control" placeholder="Ejemplo: Directorio EmpresasAgricolas.cl SpA" required>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Buscar</button>
+        </form>
+        <div id="results" class="mt-4"></div>
+    </main>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
